fix: footer overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,7 @@ footer {
   border-top: 1px solid rgba(0, 0, 0, .1);
   margin-top: 30px;
   padding: 10px;
+  overflow: hidden;
 }
 
 .footer-container {
